acvus-mir-test/tests/snapshots/e2e__arithmetic_to_string.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = context_project @a
     1 │   r1 = context_load r0
     2 │   r2 = context_project @b
     3 │   r3 = context_load r2
     5 │   r4 = r1 + r3
     6 │   r5 = call #0(r4)
     7 │   r6 = T0 + r5
     8 │   return r6

    ; r0 (@a) : Int
    ; r1 (v2) : Int
    ; r2 (@b) : Int
    ; r3 (v4) : Int
    ; r4 (v10) : Int
    ; r5 (to_string(...)) : String
    ; r6 (v12) : String
    ; r7 (v7) : Int
    ; r8 (@a) : Int
    ; r9 (v9) : Int
    ; r10 (v5) : String
    ; r11 (@b) : Int
