acvus-mir-test/tests/snapshots/e2e__boolean_not.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = undef
     1 │   r1 = ref @flag
     2 │   r2 = load r1
     4 │   r3 = ref @flag
     5 │   r4 = !r2
     7 │   r5 = T0 + T0
     8 │   r6 = call #0(r4)
     9 │   r7 = r5 + r6
    10 │   return r7

    ; r0 (v15) : Bool
    ; r1 (@flag) : Ref<Bool>
    ; r2 (@flag) : Bool
    ; r3 (@flag) : Ref<Bool>
    ; r4 (v6) : Bool
    ; r5 (v10) : String
    ; r6 (to_string(...)) : String
    ; r7 (v14) : String
    ; r8 (v3) : String
    ; r9 (v11) : Ref<Bool>
    ; r10 (v9) : String
    ; r11 (v5) : Bool
    ; r12 (x) : Bool
    ; r13 (v8) : Ref<Bool>
