acvus-mir-test/tests/snapshots/e2e__builtin_all.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 │   r0 = context_load @items
     1 │   r1 = closure L0 []
     2 │   r2 = call all(r0, r1)
     3 │   r3 = call to_string(r2)
     4 │   emit r3

    ; r0 (@items) : List<Int>
    ; r1 (v1) : Fn(Int) -> Bool
    ; r2 (all(...)) : Bool
    ; r3 (to_string(...)) : String

=== closure L0 (x) ===
     0 │   r1 = const 0
     1 │   r2 = r0 > r1
     2 │   return r2

    ; r0 (v0) : Int
    ; r1 (v1) : Int
    ; r2 (v2) : Bool
