acvus-mir-test/tests/snapshots/e2e__builtin_any.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = context_project @items
     1 │   r1 = context_load r0
     3 │   r2 = cast ListToIterator r1
     4 │   r3 = closure L0 []
     5 │   r4 = poison
     6 │   r5 = poison
     7 │   r6 = T0 + r5
     8 │   return r6

    ; r0 (@items) : <error>
    ; r1 (v1) : List<Int>
    ; r2 (v5) : Iterator<Int>
    ; r3 (v6) : Fn(Int) -> Bool
    ; r4 (any(...)) : Bool
    ; r5 (to_string(...)) : String
    ; r6 (v9) : String
    ; r7 (@items) : List<Int>
    ; r8 (v2) : String
    ; r9 (v4) : List<Int>

=== closure L0 (ValueId(0)) ===
     1 │   r0 = r1 > 10 (r2)
     2 │   return r0

    ; r0 (v3) : Bool
    ; r1 (v0) : Int
    ; r2 (v2) : Int
    ; r3 (x) : Int
    ; r4 (v4) : Int
