acvus-mir-test/tests/snapshots/e2e__builtin_contains.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = context_project @items
     1 │   r1 = context_load r0
     3 │   r2 = call #0(r1)
     5 │   r3 = call #1(r2, 3 (r4))
     6 │   r5 = call #2(r3)
     7 │   r6 = T0 + r5
     8 │   return r6

    ; r0 (@items) : List<Int>
    ; r1 (v2) : List<Int>
    ; r2 (v6) : Iterator<?0, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
    ; r3 (contains(...)) : Bool
    ; r4 (v7) : Int
    ; r5 (to_string(...)) : String
    ; r6 (v10) : String
    ; r7 (v3) : String
    ; r8 (v5) : List<Int>
    ; r9 (@items) : List<Int>
