acvus-mir-test/tests/snapshots/e2e__builtin_find.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = context_project @items
     1 │   r1 = context_load r0
     3 │   r2 = call #0(r1)
     4 │   r3 = closure L0 []
     5 │   r4 = call #1(r2, r3)
     6 │   r5 = call #2(r4)
     7 │   r6 = T0 + r5
     8 │   return r6

    ; r0 (@items) : List<Int>
    ; r1 (v2) : List<Int>
    ; r2 (v6) : Iterator<?0, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
    ; r3 (v7) : Fn(Int) -> Bool
    ; r4 (find(...)) : Int
    ; r5 (to_string(...)) : String
    ; r6 (v10) : String
    ; r7 (v3) : String
    ; r8 (v5) : List<Int>
    ; r9 (@items) : List<Int>

=== closure L0 (ValueId(0)) ===
     0 │   r0 = undef
     2 │   r1 = r2 > 10 (r3)
     3 │   return r1

    ; r0 (v5) : Int
    ; r1 (v4) : Bool
    ; r2 (v1) : Int
    ; r3 (v3) : Int
    ; r4 (x) : Int
