acvus-mir-test/tests/snapshots/e2e__builtin_fold.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = context_project @items
     1 │   r1 = context_load r0
     3 │   r2 = cast ListToIterator r1
     5 │   r3 = closure L0 []
     6 │   r4 = poison
     7 │   r5 = poison
     8 │   r6 = T0 + r5
     9 │   return r6

    ; r0 (@items) : <error>
    ; r1 (v1) : List<Int>
    ; r2 (v5) : Iterator<Int>
    ; r3 (v7) : Fn(Int, Int) -> Int
    ; r4 (fold(...)) : Int
    ; r5 (to_string(...)) : String
    ; r6 (v10) : String
    ; r7 (@items) : List<Int>
    ; r8 (v6) : Int
    ; r9 (v2) : String
    ; r10 (v4) : List<Int>

=== closure L0 (ValueId(0), ValueId(1)) ===
     0 │   r0 = r1 + r2
     1 │   return r0

    ; r0 (v4) : Int
    ; r1 (v0) : Int
    ; r2 (v1) : Int
    ; r3 (x) : Int
    ; r4 (v5) : Int
    ; r5 (v6) : Int
    ; r6 (acc) : Int
