acvus-mir-test/tests/snapshots/e2e__builtin_join.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = ", "

=== main ===
     0 │   r0 = context_project @names
     1 │   r1 = context_load r0
     3 │   r2 = cast ListToIterator r1
     5 │   r3 = poison
     6 │   r4 = T0 + r3
     7 │   return r4

    ; r0 (@names) : <error>
    ; r1 (v1) : List<String>
    ; r5 (v2) : String
    ; r6 (@names) : List<String>
    ; r7 (v4) : List<String>
    ; r2 (v5) : Iterator<String>
    ; r8 (v6) : String
    ; r3 (join(...)) : String
    ; r4 (v8) : String
