acvus-mir-test/tests/snapshots/e2e__builtin_len.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 │   r0 = storage_load $items
     1 │   r1 = call len(r0)
     2 │   r2 = call to_string(r1)
     3 │   emit r2

    ; r0 ($items) : List<Int>
    ; r1 (len(...)) : Int
    ; r2 (to_string(...)) : String
