acvus-mir-test/tests/snapshots/e2e__builtin_reduce.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = context_project @items
     1 │   r1 = context_load r0
     3 │   r2 = cast ListToIterator r1
     4 │   r3 = closure L0 []
     5 │   r4 = poison
     6 │   r5 = poison
     7 │   r6 = T0 + r5
     8 │   return r6

    ; r0 (@items) : <error>
    ; r1 (v1) : List<Int>
    ; r7 (v2) : String
    ; r8 (@items) : List<Int>
    ; r9 (v4) : List<Int>
    ; r2 (v5) : Iterator<Int>
    ; r3 (v6) : Fn(Int, Int) -> Int
    ; r4 (reduce(...)) : Int
    ; r5 (to_string(...)) : String
    ; r6 (v9) : String

=== closure L0 (ValueId(0), ValueId(1)) ===
     0 │   r0 = r1 + r2
     1 │   return r0

    ; r1 (v0) : Int
    ; r2 (v1) : Int
    ; r0 (v2) : Int
