acvus-mir-test/tests/snapshots/e2e__catch_all_with_binding.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = "admin"
  T2 = "guest"

=== main ===
     0 │   r0 = undef
     1 │   r1 = context_project @role
     2 │   r2 = context_load r1
     4 │ L2:
     5 │   r3 = test r2 == "admin"
     6 │   jump_if r3 then L3 else L1
     7 │ L3:
    10 │   r4 = T0 + T1
    11 │   jump L0(r4, r0)
    12 │ L1:
    16 │   r5 = T0 + T0
    17 │   r6 = r5 + T2
    18 │   jump L0(r6, T2)
    19 │ L0(r7: String, r8: String):  ; merge_of L2
    20 │   r9 = T0 + r7
    21 │   return r9

    ; r0 (v18) : String
    ; r1 (@role) : String
    ; r2 (v2) : String
    ; r3 (v6) : Bool
    ; r4 (v9) : String
    ; r5 (v13) : String
    ; r6 (v15) : String
    ; r7 (v16) : String
    ; r8 (v19) : String
    ; r9 (v17) : String
    ; r10 (v3) : String
    ; r11 (v11) : String
    ; r12 (fallback) : String
    ; r13 (v12) : String
    ; r14 (@role) : String
    ; r15 (v7) : String
    ; r16 (v10) : String
    ; r17 (v5) : String
    ; r18 (v8) : String
